--- a/Test_RMarkdown.Rmd
+++ b/Test_RMarkdown.Rmd
@@ -2,7 +2,7 @@
 title: "Test RMarkdown"
 author: "Brent O'Carrigan"
 date: "10/04/2019"
-output: html_document
+output: gitub_document
 ---
 
 ```{r setup, include=FALSE}
