--- a/Test_RMarkdown.Rmd
+++ b/Test_RMarkdown.Rmd
@@ -2,8 +2,9 @@
 title: "Test RMarkdown"
 author: "Brent O'Carrigan"
 date: "10/04/2019"
-output: html_document
-  keep_md: TRUE
+output: 
+  html_document:
+    keep_md: TRUE
 ---
 
 # Header 1
